src/test/ui/resolve/issue-6702.stderr
error[E0423]: expected function, found struct `Monster`
  --> $DIR/issue-6702.rs:7:14
   |
LL |     let _m = Monster();
   |              ^^^^^^^ did you mean `Monster { /* fields */ }`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
